# tracy

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  flake.nix
.github/workflows/: release.yml
docs/: README.md  cli.md  config.md
src/: args.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  output.rs
src/filter/: args.rs  error.rs  mod.rs
src/scan/: args.rs  error.rs  mod.rs
tests/: cli.rs  integration.rs
tests/fixtures/: .gitattributes  .gitignore  code.generated.rs  config.json
tests/fixtures/docs/: guide.md
tests/fixtures/src/: Service.java  api.ts  edge_cases.rs  helper.cpp  lib.rs  main.rs  server.go  utils.js
