[package]
name = "tracy"
version = "0.1.0"
edition = "2024"
description = "A tool for tracking in-code markers for requirement traceability"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fordtom/tracy"
categories = ["command-line-utilities"]
keywords = ["traceability", "requirements", "tracing"]

exclude = ["flake.*", ".envrc", ".cursor/**", ".github/**"]

[[bin]]
name = "tracy"
path = "src/main.rs"

[dependencies]
