[package]
name = "tracy"
version = "0.1.1"
edition = "2024"
description = "A tool for tracking in-code markers for requirement traceability"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fordtom/tracy"
categories = ["command-line-utilities"]
keywords = ["traceability", "requirements", "tracing"]

exclude = ["flake.*", ".envrc", ".cursor/**", ".github/**"]

[[bin]]
name = "tracy"
path = "src/main.rs"

[dependencies]
ast-grep-language = { version = "0.40.0", features = ["builtin-parser"] }
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
glob = "0.3.3"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.23.0"
